<resources>
    <string name="app_name">BMICalculator</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="calculate">calculate</string>
    <string name="nav_bmi_calculator_btn">BMI Calculator</string>
    <string name="nav_calorie_calculator_btn">Calorie calculator</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="curry_chicken">"      Filet z kurczaka doprawić solą (lekko, bo pasta curry jest już słona) oraz pieprzem. Pokroić na kawałki i obsmażyć (w woku lub na patelni) na większym ogniu na łyżce oliwy, razem z pokrojoną papryką. Pod koniec smażenia dodać pastę curry.     Wlać mleko kokosowe i gotować aż sos zredukuje się o połowę i zgęstnieje. Dodać śmietankę kremówkę. Wymieszać i doprawić cukrem trzcinowym. Przełożyć do miseczek, posypać lekko zrumienionym na suchej patelni sezamem i udekorować zielonymi liśćmi.  "</string>
    <string name="steak">Steka smaż na rozgrzanym oleju 3 minuty z jednej strony, następnie przełóż na drugą i dodaj 50 g masła, tymianek i rozgniecione ząbki czosnku. Smaż jeszcze około 3 minuty podlewając sosem maślanym. Przed podaniem przełóż stek na ciepły talerz aby „odpoczął” 5 minut. Podawaj z ulubionymi dodatkami, ja lubię młode ziemniaczki i pieczarki oraz sos do steków i burgerów. Oczywiście nie zapomnij o kawałku masła ziołowego.</string>
    <string name="nav_bmi_chart">BMI Chart</string>
    <string name="nav_quiz_button">Quiz</string>
    <string name="diet_quiz">Quizik</string>
    <string name="quiz_title">Jaki prowadzisz tryb zycia?</string>
    <string name="answer1">Zdrowo sie odzywiam i cwicze</string>
    <string name="answer2">Staram sie zdrowo odzywiac ale nie cwicze regularnie</string>
    <string name="answer3">Nie odzywiam sie zdrowo ani nie cwicze lub bardzo rzadko</string>
    <string name="quiz_submit">Submit</string>
    <string name="quiz_question_2">Jakie masz preferencje zywieniowe</string>
    <string name="quiz_answer_1_1">Normalne</string>
    <string name="quiz_anwer_2_2">Wegetarian/Weganin</string>
    <string name="quiz_answer_3_3">Keto</string>
    <string name="ile_kg_chcesz_zgubic">Ile kg chcesz zgubic?</string>
    <string name="powyzej_10kg">powyzej 10kg</string>
    <string name="powyzej_5_kg">powyzej 5 kg</string>
    <string name="powyzej_20kg">powyzej 20kg</string>
    <string name="ile_razy_w_tygodniu_jestes_w_stanie_cwiczyc">Ile razy w tygodniu jestes w stanie cwiczyc?</string>
    <string name="_1_2_razy">1-2 razy</string>
    <string name="_3_4_razy">3-4 razy</string>
    <string name="_5_i_wiecej">5 i wiecej</string>
    <string name="potrzebujesz_planow_dietetycznych">Potrzebujesz planow dietetycznych ?</string>
    <string name="tak">Tak</string>
    <string name="nie">Nie</string>
    <string name="nie_wiem">Nie wiem</string>
</resources>