<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.main.MainActivity">

    <Button
        android:id="@+id/nav_bmi_calculaor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_bmi_calculator_btn" />

    <Button
        android:id="@+id/nav_bmi_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_bmi_chart" />

    <Button
        android:id="@+id/nav_calorie_calculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_calorie_calculator_btn" />

    <Button
        android:id="@+id/nav_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_quiz_button" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="123dp"
        android:text="@string/curry_chicken" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/steak" />
</LinearLayout>